--- a/profil.html
+++ b/profil.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Profil</title>
 </head>
 <body>
-$END$
+<form>
+    Entrez votre nom  <br>
+    <input type="text" name="nom">
+</form>
+<form>
+    Entrez votre prénom  <br>
+    <input type="text" name="prénom">
+</form>
+<form action="accueil.php">
+    <button type="submit">Valider</button>
+</form>
 </body>
 </html>
