Mon projet version 2

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bienvenue</title>
+    <title>Title</title>
 </head>
 <body>
-<p><a href="profil.html">profil</a></p>
+Bonjour et bienvenue !
+<a href="login.html"> Lien vers votre profil</a>
 </body>
 </html>
