--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 Bonjour et bienvenue !
+<p>Site crée le 18/08/2024</p>
 <a href="login.html"> Lien vers votre profil</a>
 </body>
 </html>
